fix some minor sonar issues